--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^8.6.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "drei": "^2.2.21",
+    "i": "^0.3.7",
+    "npm": "^8.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-three-fiber": "^4.2.21",
+    "three": "^0.136.0",
+    "three-js": "^79.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
